--- a/mystyles/styles.css
+++ b/mystyles/styles.css
@@ -552,4 +552,20 @@ audio{
 .ar:hover {
   transform: scale(1.3)
 }
+
+.form {
+  background-color: #f8f8f8;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  border-radius: 15px;
+}
+.mb-3{
+  margin: 2em;
+}
+
+.btn-submit {
+  background-color: #fda6ef;
+  color: #fff;
+  margin: 2em;
+}
   
